--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -609,6 +609,7 @@ streamjs.investing.com
 .consent.cookiebot.com
 .data-sdk-uuid-log.d.meituan.net
 .adscfg.togothermany.cn
+.tracking.mcdonalds.com.cn
 # not generated below
 .16dd-advertise-1252317822.file.myqcloud.com
 .16dd-advertise-1252317822.image.myqcloud.com
