--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -610,6 +610,7 @@ streamjs.investing.com
 .data-sdk-uuid-log.d.meituan.net
 .adscfg.togothermany.cn
 .tracking.mcdonalds.com.cn
+.ads.cup.com.cn
 # not generated below
 .16dd-advertise-1252317822.file.myqcloud.com
 .16dd-advertise-1252317822.image.myqcloud.com
