--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,5 @@
 .mcdn.bilivideo.cn
+.xp.apple.com
 # Auto Generated
 .sentry.io
 .app.chatwoot.com
@@ -612,6 +613,19 @@ streamjs.investing.com
 .adscfg.togothermany.cn
 .tracking.mcdonalds.com.cn
 .ads.cup.com.cn
+js.iterable.com
+api.iterable.com
+api-js.mixpanel.com
+stun.smartgslb.com
+.net.mydays.de
+.telemetry-coverage.mozilla.org
+.omtrdc.net
+.incoming-telemetry.thunderbird.net
+.openx.net
+.notify6.com
+.notifysrv.com
+.advertising.com
+.crazyegg.com
 # not generated below
 .16dd-advertise-1252317822.file.myqcloud.com
 .16dd-advertise-1252317822.image.myqcloud.com
@@ -1171,16 +1185,3 @@ streamjs.investing.com
 .ykad-gateway.youku.com
 .youxi.kugou.com
 .zeus.ad.xiaomi.com
-js.iterable.com
-api.iterable.com
-api-js.mixpanel.com
-stun.smartgslb.com
-.net.mydays.de
-.telemetry-coverage.mozilla.org
-.omtrdc.net
-.incoming-telemetry.thunderbird.net
-.openx.net
-.notify6.com
-.notifysrv.com
-.advertising.com
-.crazyegg.com
