--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -626,6 +626,7 @@ stun.smartgslb.com
 .notifysrv.com
 .advertising.com
 .crazyegg.com
+.analytics.immersivetranslate.com
 # not generated below
 .16dd-advertise-1252317822.file.myqcloud.com
 .16dd-advertise-1252317822.image.myqcloud.com
