--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1168,7 +1168,6 @@ stun.smartgslb.com
 .widgets.outbrain.com
 .widgets.pinterest.com
 .win.gdt.qq.com
-.wn.pos.baidu.com
 .wn.x.jd.com
 .ws-keyboard.shouji.sogou.com
 .ws.sj.qq.com
@@ -1186,3 +1185,8 @@ stun.smartgslb.com
 .ykad-gateway.youku.com
 .youxi.kugou.com
 .zeus.ad.xiaomi.com
+.bdad.123pan.cn
+.cbjs.baidu.com
+.cpro.baidustatic.com
+.pos.baidu.com
+.umini.shujupie.com
