--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -628,3 +628,4 @@ stun.smartgslb.com
 .analytics.immersivetranslate.com
 .partiality.itunes.apple.com
 .spider-tracker.xiaohongshu.com
+.uve.weibo.com
