--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -629,3 +629,5 @@ stun.smartgslb.com
 .partiality.itunes.apple.com
 .spider-tracker.xiaohongshu.com
 .uve.weibo.com
+.applog-perf.uc.cn
+.umdc.alibabachengdun.com
