--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -631,3 +631,9 @@ stun.smartgslb.com
 .applog-perf.uc.cn
 .umdc.alibabachengdun.com
 .appdownload.alicdn.com
+.ay.bilibili.com
+.grpc.biliapi.net
+.chat.bilibili.com
+.bilibili.cn
+.ads-monitoring.papegames.com
+.appcfg.v.qq.com
