--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -626,6 +626,7 @@ stun.smartgslb.com
 .advertising.com
 .crazyegg.com
 .analytics.immersivetranslate.com
+# 下为adh命中
 .spider-tracker.xiaohongshu.com
 .uve.weibo.com
 .applog-perf.uc.cn
@@ -637,3 +638,14 @@ stun.smartgslb.com
 .bilibili.cn
 .ads-monitoring.papegames.com
 .appcfg.v.qq.com
+.iphonesubmissions.apple.com
+.acs.m.taobao.com
+.hd.mi.com
+.cnbj1.fds.api.xiaomi.com
+.experiments.apple.com
+.hudong.alicdn.com
+.log.cmbchina.com
+.partiality.itunes.apple.com
+.nfa.jd.com
+.splash-online-decision.xiaohongshu.com
+.cdn.exp.xiaomi.com
