--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -649,3 +649,13 @@ stun.smartgslb.com
 .nfa.jd.com
 .splash-online-decision.xiaohongshu.com
 .cdn.exp.xiaomi.com
+ttnet-doh.feishu.cn
+ttnet-dig.feishu.cn
+.rmonitor.qq.com
+.arms-retcode.aliyuncs.com
+.rdelivery.qq.com
+.snowflake.qq.com
+.api-unionid.meituan.com
+httpdns.meituan.com
+.apd-pcdnwxlogin.teg.tencent-cloud.net
+.tpns.tencent.com
