--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -626,7 +626,7 @@ stun.smartgslb.com
 .advertising.com
 .crazyegg.com
 .analytics.immersivetranslate.com
-# 下为adh命中
+# from adh
 .spider-tracker.xiaohongshu.com
 .uve.weibo.com
 .applog-perf.uc.cn
@@ -659,3 +659,19 @@ ttnet-dig.feishu.cn
 httpdns.meituan.com
 .apd-pcdnwxlogin.teg.tencent-cloud.net
 .tpns.tencent.com
+.tnc0-aliec2.zijieapi.com
+.fp-it.fengkongcloud.com
+.referee.xiaohongshu.com
+.crash.xiaohongshu.com
+switch.cup.com.cn
+.getui.net
+.ossgw.alicdn.com
+.tnc3-aliec2.zijieapi.com
+.sh.apigw.tencentcs.com
+.ietheivaicai.com
+.at.atwola.com
+.securemetrics.apple.com
+.sparkloop.app
+.fourier.alibaba.com
+.xycdn.com
+.natdetection.onethingpcs.com
