--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -675,3 +675,11 @@ switch.cup.com.cn
 .fourier.alibaba.com
 .xycdn.com
 .natdetection.onethingpcs.com
+.cu-cn-north00002.gala.convection.cn
+.puata.info
+.jpushjd.m.jd.com
+.open.e.189.cn
+.stat.youpin.mi.com
+.ins.elements.video
+.pc-mon.zijieapi.com
+.loggw.alipay.com
