--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -683,3 +683,10 @@ switch.cup.com.cn
 .ins.elements.video
 .pc-mon.zijieapi.com
 .loggw.alipay.com
+.smzdm.soboten.com
+.umc.danuoyi.alicdn.com
+.cdn-go.cn
+.live-trace.bilibili.com
+.report-edge.agora.io
+.app-ads-services.com
+.wwads.cn
