--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -690,3 +690,23 @@ switch.cup.com.cn
 .report-edge.agora.io
 .app-ads-services.com
 .wwads.cn
+.httpdns.yunxindns.com
+.windowsupdate.com.mwcname.com
+.info.pinyin.sogou.com
+.get.sogou.com
+.vv.video.qq.com
+.doubleverify.com
+.monacobeatles.com
+.dxp.baidu.com
+.bgg.baidu.com
+.hmma.baidu.com
+.ffe390afd658c19dcbf707e0597b846d.de
+.api.ffbbbdc6d3c353211fe2ba39c9f744cd.com
+.fpnpmcdn.net
+.fpjs.io
+.jbzj.com
+.privacymanager.io
+.adsninja.ca
+.apd-pcdnwxstat.teg.tencent-cloud.net
+.app-ad.variflight.com
+ssl-cdn.static.browser.mi-img.com
