--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -710,3 +710,11 @@ switch.cup.com.cn
 .apd-pcdnwxstat.teg.tencent-cloud.net
 .app-ad.variflight.com
 ssl-cdn.static.browser.mi-img.com
+.ucweb.com
+.adtrack.quark.cn
+.applog.lc.quark.cn
+.huichuan-mc.sm.cn
+.image-ad.sm.cn
+.proxy-mob-cld.alicdn.com
+.track.uc.cn
+.track.lc.quark.cn
