--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -718,3 +718,7 @@ ssl-cdn.static.browser.mi-img.com
 .proxy-mob-cld.alicdn.com
 .track.uc.cn
 .track.lc.quark.cn
+.prodregistryv2.org
+.cdn.fds.api.xiaomi.com
+.indexww.com
+.featuregates.org
