--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -722,3 +722,13 @@ ssl-cdn.static.browser.mi-img.com
 .cdn.fds.api.xiaomi.com
 .indexww.com
 .featuregates.org
+.store.xiaohongshu.com
+.userzoom.com
+.cdn.decibelinsight.net
+.medtargetsystem.com
+.adtrack.xiaojukeji.com
+.log.snssdk.com
+.monitor-frontend-collector.a.bybit-aws.com
+.doh.dns.apple.com
+.adsrvr.org
+.insights.algolia.io
