--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -732,3 +732,33 @@ ssl-cdn.static.browser.mi-img.com
 .doh.dns.apple.com
 .adsrvr.org
 .insights.algolia.io
+.hreport.meituan.com
+.we-stats.com
+.lptag.liveperson.net
+.ip.qiyutech.tech
+.ml314.com
+.bkt.clouddn.com
+.rcgi.video.qq.com
+.ju.taobao.com
+a.klaviyo.com
+fast.a.klaviyo.com
+.judge.me
+.flash.xiaohongshu.com
+.a.tampermonkey.net
+.cdn.logsnag.com
+.giocdn.com
+.growingio.com
+.analytics.dortania.com
+.jcm.jd.com
+.interface.bilibili.com
+.bodis.com
+.radarsubmissions.apple.com
+.ethicalads.io
+.53kf.com
+.mssdk.snssdk.com
+.js.users.51.la
+.s9.cnzz.com
+.bjmantis.net
+.probe.bjmantis.net
+.easyliao.com
+.aigccdn.com
