--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -762,3 +762,30 @@ fast.a.klaviyo.com
 .probe.bjmantis.net
 .easyliao.com
 .aigccdn.com
+.staticfile.net
+.bshare.cn
+.tapioni.com
+cdn.gladly.com
+.srtb.msn.cn
+.ta.trs.cn
+.activity.wisepops.com
+.promotion.aliyun.com
+.mob.com
+.open.kuaishouzt.com
+.open.kwaizt.com
+.timon.zijieapi.com
+.voiceads.cn
+.unet.quark.cn
+.ssp.1rtb.com
+.api.sprig.com
+.mobappconfig.securities.eastmoney.com
+.iubenda.com
+.dd-static.jd.com
+.pump.fun
+.jmlk.co
+.pb.sogou.com
+.theta.sogoucdn.com
+.sp1.baidu.com
+.imgs.xinhuanet.com
+.datadoghq-browser-agent.com
+.a.userscript.zone
