--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -789,3 +789,17 @@ cdn.gladly.com
 .imgs.xinhuanet.com
 .datadoghq-browser-agent.com
 .a.userscript.zone
+.h.online-metrix.net
+.online-metrix.net
+.datareport.fkw.com
+.volctrack.com
+.tganalytics.xyz
+.o.webmd.com
+.se.360.cn
+.disableadblock.com
+.apmplus.volces.com
+.go.ezodn.com
+.g.ezodn.com
+.polaris.zijieapi.com
+.tnc3-bjlgy.snssdk.com
+.adukwai.com
