--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -803,3 +803,26 @@ cdn.gladly.com
 .polaris.zijieapi.com
 .tnc3-bjlgy.snssdk.com
 .adukwai.com
+.imtt.qq.com
+.flux-cdn.com
+.browsiprod.com
+.avantisvideo.com
+.cdn.avantisvideo.com
+.aniview.com
+.player.aniview.com
+.go1.aniview.com
+.track1.aniview.com
+.s2s.aniview.com
+.cs.krushmedia.com
+.sync.aniview.com
+.metrics.dune.com
+.dw-online.ksosoft.com
+.g.tbcdn.cn
+.ac.dun.163.com
+.analytics.meituan.net
+.m.taopiaopiao.com
+.adash-emas.cn-hangzhou.aliyuncs.com
+.sentry.d.xiaomi.net
+.mobileservice.cn
+.c.sm.cn
+.aedns.weixin.qq.com
