--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -826,3 +826,13 @@ cdn.gladly.com
 .mobileservice.cn
 .c.sm.cn
 .aedns.weixin.qq.com
+.uranus.jd.com
+.event-stream.spot.im
+.pix.spot.im
+.3lift.com
+.bidswitch.net
+.connatix.com
+.rkdms.com
+.33across.com
+.kunpeng-sc.csdnimg.cn
+.tns.simba.taobao.com
