--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -837,3 +837,15 @@ cdn.gladly.com
 .kunpeng-sc.csdnimg.cn
 .tns.simba.taobao.com
 .wl.jd.com
+.device.marketingcloudapis.com
+.sentinelbi.com
+.applets.ebxcdn.com
+.carrick-ui.advoncommerce.com
+.trackerapi.ebxcdn.com
+.click.lenovo.com
+.hybrid.miniapp.taobao.com
+.mos.m.taobao.com
+.vegslb.com
+.tnc0-alisc1.zijieapi.com
+.tidiochat.com
+.p.store.qq.com
