--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -850,3 +850,13 @@ cdn.gladly.com
 .tidiochat.com
 .p.store.qq.com
 .partner.uc.cn
+data.vod.itc.cn
+.pb.hd.sohu.com.cn
+.sf1-ttcdn-tos.pstatp.com
+.wcp.taobao.com
+.dl.reg.163.com
+.c.m.163.com
+.logapi.zhipin.com
+amos.alicdn.com
+.aizhantj.com
+.byteadverts.com
