--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -860,7 +860,7 @@ data.vod.itc.cn
 amos.alicdn.com
 .aizhantj.com
 .byteadverts.com
-.pftk.temu.com^
+.pftk.temu.com
 .jspassport.ssl.qhimg.com
 .lianmengapi.snssdk.com
 .haohuo.snssdk.com
