--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -652,7 +652,7 @@ stun.smartgslb.com
 ttnet-doh.feishu.cn
 ttnet-dig.feishu.cn
 .rmonitor.qq.com
-.arms-retcode.aliyuncs.com
+# 误杀千牛 .arms-retcode.aliyuncs.com
 .rdelivery.qq.com
 .snowflake.qq.com
 .api-unionid.meituan.com
