--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -502,7 +502,7 @@ inapps.appsflyersdk.com
 .ca.iadsdk.apple.com
 .-tracker.biliapi.net
 .googleads.g.doubleclick.net
-.s-gm.mmstat.com
+# 误杀千牛 .s-gm.mmstat.com
 .cdn.ynuf.aliapp.org
 .px.effirst.com
 .yktd.m.cn.miaozhen.com
@@ -652,7 +652,7 @@ stun.smartgslb.com
 ttnet-doh.feishu.cn
 ttnet-dig.feishu.cn
 .rmonitor.qq.com
-# 误杀千牛 .arms-retcode.aliyuncs.com
+.arms-retcode.aliyuncs.com
 .rdelivery.qq.com
 .snowflake.qq.com
 .api-unionid.meituan.com
