--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -60,7 +60,7 @@ amdc.alipay.com
 badjs.weixinbridge.com
 .mcs.zijieapi.com
 ynuf.aliapp.org
-.mmstat.com
+# 误杀太多.mmstat.com
 assets.msn.cn
 .fourier.taobao.com
 .h-adashx.ut.taobao.com
@@ -522,7 +522,7 @@ inapps.appsflyersdk.com
 .api.share.baidu.com
 .www.google-analytics.com
 .s.jpush.cn
-.wgo.mmstat.com
+# 误杀.wgo.mmstat.com
 .sdk.e.qq.com
 .api-access.pangolin-sdk-toutiao.com
 .mi.gdt.qq.com
