--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -60,10 +60,10 @@ amdc.alipay.com
 badjs.weixinbridge.com
 .mcs.zijieapi.com
 ynuf.aliapp.org
-# 误杀太多.mmstat.com
+.mmstat.com
 assets.msn.cn
 .fourier.taobao.com
-.h-adashx.ut.taobao.com
+# 误杀千牛 .h-adashx.ut.taobao.com
 .pcapp-data-collect.youku.com
 .api.edgeoffer.microsoft.com
 ntp.msn.com
@@ -502,7 +502,6 @@ inapps.appsflyersdk.com
 .ca.iadsdk.apple.com
 .-tracker.biliapi.net
 .googleads.g.doubleclick.net
-# 误杀千牛 .s-gm.mmstat.com
 .cdn.ynuf.aliapp.org
 .px.effirst.com
 .yktd.m.cn.miaozhen.com
@@ -522,7 +521,6 @@ inapps.appsflyersdk.com
 .api.share.baidu.com
 .www.google-analytics.com
 .s.jpush.cn
-# 误杀.wgo.mmstat.com
 .sdk.e.qq.com
 .api-access.pangolin-sdk-toutiao.com
 .mi.gdt.qq.com
@@ -537,7 +535,6 @@ inapps.appsflyersdk.com
 .app-analytics-services.com
 .beacons.gvt2.com
 .wxa.wxs.qq.com
-.gm.mmstat.com
 .ulogs.umengcloud.com
 .knicks.jd.com
 .blackhole.m.jd.com
@@ -562,7 +559,6 @@ inapps.appsflyersdk.com
 .mapi.m.jd.com
 .sobot.com
 .segment-data.zqtk.net
-.hd.mmstat.com
 .af4a.adj.st
 .devs.data.mob.com
 .go.mnaspm.com
@@ -570,7 +566,6 @@ inapps.appsflyersdk.com
 .asia.adform.net
 .syndication.traffichaus.com
 .a.magsrv.com
-.ws.mmstat.com
 .xxxviijmp.com
 .s3t3d2y8.afcdn.net
 .r.trwl1.com
@@ -583,7 +578,6 @@ inapps.appsflyersdk.com
 .c-gtc.getui.net
 .sdk.open.talk.igexin.com
 .b-gtc.getui.net
-.oneid.mmstat.com
 .sedoparking.com
 .ads-img-qc.xhscdn.com
 .logapi-ios.zhipin.com
