--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -63,7 +63,7 @@ ynuf.aliapp.org
 .mmstat.com
 assets.msn.cn
 .fourier.taobao.com
-# 误杀千牛 .h-adashx.ut.taobao.com
+.h-adashx.ut.taobao.com
 .pcapp-data-collect.youku.com
 .api.edgeoffer.microsoft.com
 ntp.msn.com
