--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -7,7 +7,7 @@
 dns.weixin.qq.com.cn
 .jiguang.cn
 .uservoice.com
-.amdc.m.taobao.com
+# .amdc.m.taobao.com 在extend-matching模式中会误杀1688
 .applog.uc.cn
 .dorangesource.alicdn.com
 .loggw-ex.alipay.com
