--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -633,7 +633,7 @@ stun.smartgslb.com
 .ads-monitoring.papegames.com
 .appcfg.v.qq.com
 .iphonesubmissions.apple.com
-.acs.m.taobao.com
+# extended-matching下误杀太多 .acs.m.taobao.com
 .hd.mi.com
 .cnbj1.fds.api.xiaomi.com
 .experiments.apple.com
