--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -860,3 +860,6 @@ amos.alicdn.com
 .haohuo.snssdk.com
 .feedback-c.zijieapi.com
 .telemetry.tradingview.com
+.getclicky.com
+.hugelog.fcbox.com
+.mktadsodr.ppdai.com
