--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -863,3 +863,10 @@ amos.alicdn.com
 .getclicky.com
 .hugelog.fcbox.com
 .mktadsodr.ppdai.com
+.volces.com
+.content-understand-strategy.sm.cn
+.u-mob.cn
+.log0-misc-lf.amemv.com
+.bullionglidingscuttle.com
+.amazonaws.com
+.pap.roguefitness.com
