--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -43,7 +43,7 @@ in.appcenter.ms
 .sp0.baidu.com
 .msmetrics.ws.sonos.com
 .firebaseremoteconfig.googleapis.com
-.amdc.alipay.com
+# 误杀淘票票 .amdc.alipay.com
 .push.air-matters.com
 .logs.amap.com
 .app.chat.xiaomi.net
