--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -868,5 +868,19 @@ amos.alicdn.com
 .u-mob.cn
 .log0-misc-lf.amemv.com
 .bullionglidingscuttle.com
-.amazonaws.com
 .pap.roguefitness.com
+.quicklyedit.com
+.dcms.1688.com
+.intellimize.co
+.intellimizeio.com
+.log.intellimize.co
+.bj.bcebos.com
+.networkbench.com
+.beacon.cdn.qq.com
+.vmat.gtimg.com
+# 造成误杀 .s.click.taobao.com
+.apppush-sh5.xiaohongshu.com
+.tjs.sjs.sinajs.cn
+.open.snssdk.com
+.unbouncepages.com
+.fraudmetrix.cn
