--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -885,3 +885,13 @@ amos.alicdn.com
 .ra7.xyz
 .geuba.xyz
 .btrace.qq.com
+.partwithner.com
+.ipv4dns.com
+.analytics.meituan.com
+.ai.advertisement.alibabacorp.sm.cn
+.sdk-log.partner.sm.cn
+.analytics.textexpander.com
+.yektanet.com
+.feedbackws.icloud.com.cn
+.feedbackws.fe.apple-dns.cn
+.securemvt.v.aaplimg.com
