--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -763,7 +763,6 @@ cdn.gladly.com
 .ta.trs.cn
 .activity.wisepops.com
 .promotion.aliyun.com
-.mob.com
 .open.kuaishouzt.com
 .open.kwaizt.com
 .timon.zijieapi.com
@@ -895,3 +894,48 @@ amos.alicdn.com
 .feedbackws.icloud.com.cn
 .feedbackws.fe.apple-dns.cn
 .securemvt.v.aaplimg.com
+.parkingcrew.net
+.directory.cookieyes.com
+.static.wxqcloud.qq.com.cn
+.static-alias-1.360buyimg.com
+.log.eufylife.com
+.log-h5.cmpassport.com
+.e8aeb8bbdbbd7.cdn.sohucs.com
+.chimpstatic.com
+.agoo-report.m.taobao.com
+.tysdk.95516.com
+.tp-pay.snssdk.com
+.ndcpp.com
+.ex.m.jd.com
+.aim-tag.hcn.health
+.api.feelgood.cn
+.yixiu-abtest.alicdn.com
+.fcapp.run
+.gaode-acs.m.taobao.com
+.store.is.autonavi.com
+.tracert.alipay.com
+.report.meeting.tencent.com
+.ab.qq.com
+.publiclog.zhiyan.tencent-cloud.net
+.license.vod2.myqcloud.com
+.gias.jd.com
+.qnmob3.doubanio.com
+.trade-acs.m.taobao.com
+.push2.eastmoney.com
+.emdcadvertise-wap.eastmoney.com
+.i-lq.snssdk.com
+.unsplash-video-ads.imgix.video
+.neixin.cn
+.catdot.dianping.com
+.eimg.smzdm.com
+.c.msn.cn
+.statistic.live.126.net
+.baikebcs.bdimg.com
+.pss.alicdn.com
+.securemvt.apple.com.cn
+.open-api.spot.im
+.file.daihuo.qq.com
+.sf1-scmcdn-tos.pstatp.com
+.hermes.jd.com
+.lf6-cdn-tos.bytecdntp.com
+.aihuishou.com
