更新 REJECT-DOMAINSET.conf

--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -239,7 +239,7 @@ gbfek.eastmoney.com
 sdk.open.talk.getui.net
 .gepush.com
 .urbanairship.com
-.alimama.com
+#误杀 .alimama.com
 .ott.cibntv.net
 .huatuo.qq.com
 .eum-appdynamics.com
