--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -939,3 +939,19 @@ amos.alicdn.com
 .hermes.jd.com
 .lf6-cdn-tos.bytecdntp.com
 .aihuishou.com
+.idqqimg.com
+.jsrdn.com
+click.suning.cn
+.sp3.baidu.com
+.o2o-ad-log-gateway.alibaba.com
+.virusinfo-cloudscan-cn.heytapmobi.com
+.hpplay.cn
+.nj.t.bcsp2p.baidu.com
+.4pn.cn
+.4a9.cn
+.y4n.cn
+.3p4.cn
+.u7x.cn
+.adashx.ut.dingtalk.com
+.h-adashx.ut.dingtalk.com
+.optimizely.com
