--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -955,3 +955,4 @@ click.suning.cn
 .adashx.ut.dingtalk.com
 .h-adashx.ut.dingtalk.com
 .optimizely.com
+.bigdata-sdk-tracking-service.wanshifuapp.comdatatracksdk
