--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -956,3 +956,5 @@ click.suning.cn
 .h-adashx.ut.dingtalk.com
 .optimizely.com
 .bigdata-sdk-tracking-service.wanshifuapp.comdatatracksdk
+.datafeedfile.com
+.live.primis.tech
