--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -958,3 +958,5 @@ click.suning.cn
 .bigdata-sdk-tracking-service.wanshifuapp.comdatatracksdk
 .datafeedfile.com
 .live.primis.tech
+.tm.interworksmedia.co.kr
+.rum.beusable.net
