--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -680,7 +680,8 @@
 .dl.ops.baidu.com
 .dl1sw.baidu.com
 .dl2.bav.baidu.com
-.dlied1.cdntips.net/tbs.imtt.qq.com
+.dlied1.cdntips.net
+.tbs.imtt.qq.com
 .dls-account.di.atlas.samsung.com
 .dls2s.appsflyer.com
 .dlsw.baidu.com
@@ -1452,7 +1453,8 @@
 .qss-client.qq.com
 .qurl.f.360.cn
 .qwe0231141.bj.bcebos.com
-.qzone.qq.com/wspeed.qq.com
+.qzone.qq.com
+.wspeed.qq.com
 .r.browser.miui.com
 .r.msn.com
 .r.release.qq.com
