--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -680,13 +680,13 @@
 .dl.ops.baidu.com
 .dl1sw.baidu.com
 .dl2.bav.baidu.com
-.dlied1.cdntips.net
-.tbs.imtt.qq.com
+.dlied1.cdntips.net/tbs.imtt.qq.com
 .dls-account.di.atlas.samsung.com
 .dls2s.appsflyer.com
 .dlsw.baidu.com
 .dlsw.br.baidu.com
 .dlswbr.baidu.com
+.dm.bytedance.com
 .dm.pstatp.com
 .dmapp.youku.com
 .dmg-dd.oss-accelerate.aliyuncs.com
@@ -1258,6 +1258,7 @@
 .mssdk-sg.byteoversea.com
 .mssdk-sg.tiktok.com
 .mssdk-va.byteoversea.com
+.mssdk.bytedance.com
 .mtga.setapp.com
 .mtj.baidu.com
 .mtrace.qq.com
@@ -1273,6 +1274,7 @@
 .nbsdk-baichuan.taobao.com
 .neirong.baidu.com
 .netapm.music.163.com
+.newspush.sinajs.cn
 .nex.163.com
 .nex.corp.163.com
 .nexus.officeapps.live.com
@@ -1310,6 +1312,7 @@
 .oms.wsj.com
 .oneid.mmstat.com
 .onelink.appsflyer.com
+.onelinksmartscript.appsflyer.com
 .onepush.query.yahoo.com
 .onethingpcs.com
 .online-forex-trading-systems.blogspot.com
@@ -1453,8 +1456,7 @@
 .qss-client.qq.com
 .qurl.f.360.cn
 .qwe0231141.bj.bcebos.com
-.qzone.qq.com
-.wspeed.qq.com
+.qzone.qq.com/wspeed.qq.com
 .r.browser.miui.com
 .r.msn.com
 .r.release.qq.com
@@ -1476,6 +1478,7 @@
 .redirect.pandora.xiaomi.com
 .redirect.simba.taobao.com
 .redirectdemoqpay.2c2p.com
+.redrain-aglnsy.bytedance.com
 .refer.wordpress.com
 .referrer.disqus.com
 .register.appsflyer.com
@@ -1502,6 +1505,7 @@
 .romeccs.microsoft.com
 .rp.baidu.com
 .rplog.baidu.com
+.rs.sinajs.cn
 .rs1.qq.com
 .rs2.qq.com
 .rtax.criteo.com
@@ -1758,6 +1762,7 @@
 .toggle.qq.com
 .tongji.baidu.com
 .tongji.techweb.com.cn
+.tongjiniao.com
 .toolbar.baidu.com
 .tools.3g.qq.com
 .tp2p.kg.qq.com
@@ -2014,6 +2019,10 @@
 .zx.docin.com
 .zymo.mps.weibo.com
 .zz.bdstatic.com
+.dlied1.cdntips.net
+.tbs.imtt.qq.com
+.qzone.qq.com
+.wspeed.qq.com
 # Auto Generated
 .sentry.io
 .app.chatwoot.com
@@ -2306,7 +2315,6 @@ cl2.webterren.com
 .counter.people.cn
 .easytomessage.com
 .loggw.alipaydns.com
-.mssdk.bytedance.com
 .honeycomb.wpscdn.cn
 .argo.svcmot.com
 .dreport.meituan.net
