--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,3 +1,13 @@
+.aladdinupdate.blackrock.com
+.elq.blackrock.com
+.go.blackrock.com
+.lead.blackrock.com
+.metrics.blackrock.com
+.reports.sdiapi.com
+.securemetrics.blackrock.com
+.services.sdiapi.com
+.tiqcdn.com
+.websdkmetrics.blackrock.com
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .3lift.com
@@ -2155,7 +2165,6 @@ sdk.open.talk.getui.net
 .ott.cibntv.net
 .eum-appdynamics.com
 .cdn.appdynamics.com
-.tiqcdn.com
 .siteintercept.qualtrics.com
 .cdntm.hsbc.com.hk
 .fullstory.com
