--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,3 +1,176 @@
+.abroad-ad.kingsoft-office-service.com
+.admarket.21cn.com
+.adobedc.demdex.net
+.adshows.21cn.com
+.alipaylog.com
+.analytics.21cn.com
+.analytics.meituan.net
+.assets.adobedtm.com
+.cloudservice14.kingsoft-office-service.com
+.data-sdk-uuid-log.d.meituan.net
+.data-sdk-uuid-report.dreport.meituan.net
+.demdex.net
+.dspsdk.pinduoduo.com
+.log.optimizely.com
+.logx.optimizely.com
+.market.21cn.com
+.news.docer.com
+.rating6.kingsoft-office-service.com
+.t-dsp.pinduoduo.com
+.ta.pinduoduo.com
+.th.pinduoduo.com
+.video-dsp.pddpic.com
+.3dns-1.adobe.com
+.3dns-2.adobe.com
+.3dns-3.adobe.com
+.3dns-4.adobe.com
+.3dns.adobe.com
+.activate-sea.adobe.com
+.activate-sjc0.adobe.com
+.activate.adobe.com
+.adobe-dns-2.adobe.com
+.adobe-dns-3.adobe.com
+.adobe-dns.adobe.com
+.aepxlg.adobe.com
+.analytics.cloud.coveo.com
+.analyticshipaa.cloud.coveo.com
+.anapp.adobe.com
+.app.scene7info.adobe.com
+.atsmetrics.adobe.com
+.b2binsider.adobe.com
+.c00.adobe.com
+.campaign.adobe.com
+.cimage.adobe.com
+.data.1337.test.ajo.adobe.com
+.data.acsappsvcs1.test.ajo.adobe.com
+.data.adobedemoamericas305.test.ajo.adobe.com
+.data.aem-showcase-internal.adobe.com
+.data.aem-sites-internal.adobe.com
+.data.aepcomms.cjm.adobe.com
+.data.cip.test.ajo.adobe.com
+.data.b2bmail.adobe.com
+.data.codeandtheoryamerptrsd.campaign-sandbox.adobe.com
+.data.digital.adobe.com
+.data.customer-success-apac.adobe.com
+.data.digitalmedia.adobe.com
+.data.e.adobe.com
+.data.email-discovery.cjm.adobe.com
+.data.email-disney.cjm.adobe.com
+.data.email-kpn.cjm.adobe.com
+.data.email-lightroom.cjm.adobe.com
+.data.email-merkle.cjm.adobe.com
+.data.email-mobiledx.cjm.adobe.com
+.data.email-signify.cjm.adobe.com
+.data.email-tsb.cjm.adobe.com
+.data.email.podcast.adobe.com
+.data.emaillpb.adobe.com
+.data.employeecommunications.adobe.com
+.data.gm.test.ajo.adobe.com
+.data.mail.contentauthenticity.adobe.com
+.data.mayo.test.ajo.adobe.com
+.data.notifications.campaign.adobe.com
+.data.premierleague.test.ajo.adobe.com
+.data.rahu.test.ajo.adobe.com
+.data.rtcdpsummitlab.test.ajo.adobe.com
+.data.sbux.test.ajo.adobe.com
+.data.shrm.test.ajo.adobe.com
+.data.starbucks.test.ajo.adobe.com
+.data.summit-l336.adobe.com
+.data.tep.test.ajo.adobe.com
+.data.tesco.test.ajo.adobe.com
+.data.test3.test.ajo.adobe.com
+.data.tsbuat.test.ajo.adobe.com
+.data.ultimate-success-emea.test.ajo.adobe.com
+.lmlicenses.wip4.adobe.com
+.data.wunderman-email.cjm.adobe.com
+.lp.b2bmail.adobe.com
+.lp.customer-success-apac.adobe.com
+.lp.demo1.demoamericas275.adobe.com
+.lp.demo10.demoamericas275.adobe.com
+.lp.demo11.demoamericas275.adobe.com
+.lp.demo12.demoamericas275.adobe.com
+.lp.demo13.demoamericas275.adobe.com
+.lp.demo14.demoamericas275.adobe.com
+.lp.demo15.demoamericas275.adobe.com
+.lp.demo16.demoamericas275.adobe.com
+.lp.demo17.demoamericas275.adobe.com
+.lp.demo18.demoamericas275.adobe.com
+.lp.demo19.demoamericas275.adobe.com
+.lp.demo2.demoamericas275.adobe.com
+.lp.demo20.demoamericas275.adobe.com
+.lp.demo3.demoamericas275.adobe.com
+.lp.demo4.demoamericas275.adobe.com
+.lp.demo5.demoamericas275.adobe.com
+.lp.demo6.demoamericas275.adobe.com
+.lp.demo7.demoamericas275.adobe.com
+.lp.demo8.demoamericas275.adobe.com
+.lp.demo9.demoamericas275.adobe.com
+.lp.dmillersb.journeyusshared.adobe.com
+.lp.dmillersbdev.journeyusshared.adobe.com
+.lp.email-kpn.cjm.adobe.com
+.lp.email-lightroom.cjm.adobe.com
+.lp.hol1.demoamericas275.adobe.com
+.lp.hol10.demoamericas275.adobe.com
+.lp.hol11.demoamericas275.adobe.com
+.lp.hol12.demoamericas275.adobe.com
+.lp.hol13.demoamericas275.adobe.com
+.lp.hol14.demoamericas275.adobe.com
+.lp.hol15.demoamericas275.adobe.com
+.lp.hol16.demoamericas275.adobe.com
+.lp.hol17.demoamericas275.adobe.com
+.lp.hol18.demoamericas275.adobe.com
+.lp.hol19.demoamericas275.adobe.com
+.lp.hol2.demoamericas275.adobe.com
+.lp.hol20.demoamericas275.adobe.com
+.lp.hol3.demoamericas275.adobe.com
+.lp.hol4.demoamericas275.adobe.com
+.lp.hol5.demoamericas275.adobe.com
+.lp.hol6.demoamericas275.adobe.com
+.lp.hol7.demoamericas275.adobe.com
+.lp.hol8.demoamericas275.adobe.com
+.lp.jkowalskisb.journeyusshared.adobe.com
+.lp.jkowalskisbdev.journeyusshared.adobe.com
+.targetlr.adobe.com
+.usageanalytics.coveo.com
+.lp.kkaufmansb.journeyusshared.adobe.com
+.stats.adobe.com
+.lp.owarnersb.journeyusshared.adobe.com
+.tepshared.tep.test.ajo.adobe.com
+.test-landing-page-122122.email-disney.cjm.adobe.com
+.lp.owarnersbdev.journeyusshared.adobe.com
+.lp.email-merkle.cjm.adobe.com
+.demo.emaillpb.adobe.com
+.na1r.services.adobe.com
+.ns.adobe.com
+.newtest.wunderman-email.cjm.adobe.com
+.practivate.adobe.com
+.podcast.e.adobe.com
+.na2m-pr.licenses.adobe.com
+.dev.email-signify.cjm.adobe.com
+.lptest.email-mobiledx.cjm.adobe.com
+.ereg.adobe.com
+.s.email-mobiledx.cjm.adobe.com
+.geo.adobe.com
+.lm.licenses.adobe.com
+.geo2.adobe.com
+.secureflashplayerfeedback.adobe.com
+.hl2rcv.adobe.com
+.landing.ultimate-success-emea.test.ajo.adobe.com
+.sstats.adobe.com
+.sms.email-disney.cjm.adobe.com
+.whatif.fr.adobe.com
+.whatif.it.adobe.com
+.whatif.nl.adobe.com
+.spike.email-disney.cjm.adobe.com
+.sstatstest.adobe.com
+.sms.email-mobiledx.cjm.adobe.com
+.wip3.adobe.com
+.sms.rtcdpsummitlab.test.ajo.adobe.com
+.wwis-dubc1-vip60.adobe.com
+.sms.ultimate-success-emea.test.ajo.adobe.com
+.landingpage.emaillpb.adobe.com
+.jm.customer-success-apac.adobe.com
+.hlrcv.stage.adobe.com
 .aladdinupdate.blackrock.com
 .elq.blackrock.com
 .go.blackrock.com
@@ -2171,7 +2344,6 @@ sdk.open.talk.getui.net
 .rudderlabs.com
 .picsum.photos
 .unilog.wostore.cn
-.geo2.adobe.com
 .browser.events.data.msn.cn
 api.msn.com
 .mobile.launchdarkly.com
@@ -2259,7 +2431,6 @@ resolver.msg.xiaomi.net
 .beacon.lynx.cognitivlabs.com
 .eqads.com
 .sensorsdata.cn
-.data-sdk-uuid-report.dreport.meituan.net
 .talkingdata.com
 collect.foresightnews.pro
 .365dmp.com
@@ -2271,7 +2442,6 @@ avator.eastmoney.com
 .bce.baidu.com
 .adim.pinduoduo.com
 .pemsrv.com
-.logx.optimizely.com
 .cdn.optimizely.com
 .ku6.com
 .fanxing.kugou.com
@@ -2411,13 +2581,11 @@ streamjs.investing.com
 .assets.iterable.com
 .7x24s.com
 .api-ad-adapter.wps.com
-.cloudservice14.kingsoft-office-service.com
 .sdk.fra-01.braze.eu
 .adalyser.com
 .api.rollbar.com
 .dc.sigmob.cn
 .consent.cookiebot.com
-.data-sdk-uuid-log.d.meituan.net
 .adscfg.togothermany.cn
 .tracking.mcdonalds.com.cn
 .ads.cup.com.cn
@@ -2594,7 +2762,6 @@ cdn.gladly.com
 .sync.aniview.com
 .metrics.dune.com
 .dw-online.ksosoft.com
-.analytics.meituan.net
 .m.taopiaopiao.com
 .adash-emas.cn-hangzhou.aliyuncs.com
 .mobileservice.cn
