--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,3 +1,76 @@
+.3lift.com
+.adjust.com
+.adnxs.com
+.alipaylog.com
+.amazon-adsystem.com
+.app-analytics-services.com
+.app-measurement.com
+.appsflyer.com
+.appsflyersdk.com
+.beyondwickedmapping.org
+.browser-intake-datadoghq.com
+.casalemedia.com
+.clarity.ms
+.cloudflareinsights.com
+.concert.io
+.crashlytics.com
+.criteo.com
+.ctobsnssdk.com
+.datadoghq-browser-agent.com
+.demdex.net
+.disableadblock.com
+.doubleclick-cn.net
+.doubleclick.net
+.doubleverify.com
+.featureassets.org
+.ffbbbdc6d3c353211fe2ba39c9f744cd.com
+.ffe390afd658c19dcbf707e0597b846d.de
+.geoedge.be
+.gepush.com
+.getui.com
+.google-analytics.com
+.googleadservices.com
+.googlesyndication.com
+.googletagmanager.com
+.gridsumdissector.com
+.gvt2.com
+.igexin.com
+.intergient.com
+.jiguang.cn
+.jpush.cn
+.jpush.io
+.kuiniuca.com
+.lgsmartad.com
+.media.net
+.miaozhen.com
+.mixpanel.com
+.mxpnl.com
+.oceanengine.com
+.onethingpcs.com
+.openx.net
+.opoxv.com
+.optaim.com
+.orbsrv.com
+.parsely.com
+.prodregistryv2.org
+.pubmatic.com
+.qchannel03.cn
+.rubiconproject.com
+.sail-horizon.com
+.saxysec.com
+.siftscience.com
+.singular.net
+.taboola.com
+.tiqcdn.com
+.tongjiniao.com
+.typekit.net
+.umeng.com
+.umengcloud.com
+.videoplayerhub.com
+.vidoomy.com
+.www.visualwebsiteoptimizer.com
+.wwwyoutube.com
+.xycdn.com
 .mcdn.bilivideo.cn
 .xp.apple.com
 # Auto Generated
@@ -5,7 +78,6 @@
 .app.chatwoot.com
 .metrics.icloud.com
 dns.weixin.qq.com.cn
-.jiguang.cn
 .uservoice.com
 # .amdc.m.taobao.com 在extended-matching模式中会误杀1688
 .applog.uc.cn
@@ -15,25 +87,18 @@ dns.weixin.qq.com.cn
 adashx.m.taobao.com
 .iadsdk.apple.com
 .api-adservices.apple.com
-.crashlytics.com
-.app-measurement.com
-.doubleclick.net
 dns.weixin.qq.com
 .trace.qq.com
 safebrowsing.googleapis.com
 .ocsp.godaddy.com
-.umengcloud.com
-.umeng.com
 .bugly.qq.com
 .api.share.mob.com
 .audid-api.taobao.com
 f.gm.mob.com
 sjarvis.taobao.com
-.gvt2.com
 .segment.com
 .beacon-api.aliyuncs.com
 .amplitude.com
-.appsflyer.com
 .contendvc.cnouyi.pizza
 .api.onesignal.com
 .dutils.com
@@ -50,12 +115,10 @@ in.appcenter.ms
 .ad.intl.xiaomi.com
 .tracking.intl.miui.com
 .firebaselogging-pa.googleapis.com
-.googletagmanager.com
 .posthog.com
 .mon.zijieapi.com
 .zz.bdstatic.com
 .stats.gc.apple.com
-.googleadservices.com
 .data.microsoft.com
 badjs.weixinbridge.com
 .mcs.zijieapi.com
@@ -69,7 +132,6 @@ ntp.msn.com
 .mssdk.volces.com
 .unityads.unity3d.com
 .api-access.pangolin-sdk-toutiao1.com
-.ctobsnssdk.com
 .pangolin-sdk-toutiao.com
 .pglstatp-toutiao.com
 oth.eve.mdt.qq.com
@@ -101,13 +163,9 @@ abtest.alibaba.com
 .collect.alipay.com
 ilce.alicdn.com
 .lgtvcommon.com
-.lgsmartad.com
 .ichnaea-web.netflix.com
-.jpush.cn
-.googlesyndication.com
 .api2.amplitude.com
 .fundingchoicesmessages.google.com
-.miaozhen.com
 .ads-video-al.xhscdn.com
 .ads-img-al.xhscdn.com
 jnn-pa.googleapis.com
@@ -117,7 +175,6 @@ jnn-pa.googleapis.com
 .pcfg.wps.cn
 .syndication.twitter.com
 .ident.me
-.google-analytics.com
 .mc.yandex.ru
 api.applink.mob.com
 .pingtas.qq.com
@@ -128,9 +185,6 @@ api.applink.mob.com
 .app.adjust.world
 .adjust.net.in
 .googletagservices.com
-.concert.io
-.amazon-adsystem.com
-.rubiconproject.com
 .wxs.qq.com
 .ic.wps.cn
 .cn-acs.m.cainiao.com
@@ -167,7 +221,6 @@ ad.12306.cn
 openjmacs.m.taobao.com
 acjs.aliyun.com
 .plausible.io
-.browser-intake-datadoghq.com
 .ad.zijieapi.com
 .bdwblog.eastmoney.com
 .huaxiang.eastmoney.com
@@ -230,21 +283,18 @@ cc.map.qq.com
 .retcode.taobao.com
 .xlog.jd.com
 .loc.map.baidu.com
-.getui.com
 sofire.baidu.com
 .pingjs.qq.com
 .improving.duckduckgo.com
 .collector.github.com
 gbfek.eastmoney.com
 sdk.open.talk.getui.net
-.gepush.com
 .urbanairship.com
 #误杀 .alimama.com
 .ott.cibntv.net
 .huatuo.qq.com
 .eum-appdynamics.com
 .cdn.appdynamics.com
-.tiqcdn.com
 .siteintercept.qualtrics.com
 .cdntm.hsbc.com.hk
 .fullstory.com
@@ -272,7 +322,6 @@ gtms04.alicdn.com
 .lf1-cdn-tos.bytegoofy.com
 .count.cnblogs.com
 .analytics.cnblogs.com
-.adjust.com
 .clientservices.googleapis.com
 .mob.com
 .api.mixpanel.com
@@ -313,7 +362,6 @@ oth.str.mdt.qq.com
 .zhihu-web-analytics.zhihu.com
 .sugar.zhihu.com
 .baidustatic.com
-.sail-horizon.com
 .trackwilltrk.com
 .mssdk-sg.tiktok.com
 .mon.tiktokv.com
@@ -340,8 +388,6 @@ oth.str.mdt.qq.com
 .avo.app
 .cdn.viafoura.net
 .bam-x.com
-.videoplayerhub.com
-.parsely.com
 .srtb.msn.com
 .fundingchoices.google.com
 .beacon.riskified.com
@@ -390,13 +436,11 @@ avator.eastmoney.com
 .ku6.com
 .fanxing.kugou.com
 .open.e.kuaishou.cn
-.clarity.ms
 .cc-api-data.adobe.io
 .telemetry.mozilla.org
 .adthrive.com
 .cdn.onesignal.com
 .logcollection.ronghub.com
-.cloudflareinsights.com
 .tru.am
 .pangolin-sdk-toutiao-b.com
 .adtng.com
@@ -425,7 +469,6 @@ u1.img.mobile.sina.cn
 cm.bilibili.com
 httpdns.bilivideo.com
 .dataflow.biliapi.com
-.doubleclick-cn.net
 .tracking.miui.com
 .tnc3-bjlgy.zijieapi.com
 .browser.pipe.aria.microsoft.com
@@ -486,7 +529,6 @@ inapps.appsflyersdk.com
 .woodpecker.uc.cn
 .tejia.taobao.com
 .youku-acs.m.taobao.com
-.qchannel03.cn
 .push.m.youku.com
 .orange-dc.youku.com
 .yk-ssp.ad.youku.com
@@ -531,7 +573,6 @@ inapps.appsflyersdk.com
 .h.trace.qq.com
 .cf.iadsdk.apple.com
 .firebase-settings.crashlytics.com
-.app-analytics-services.com
 .beacons.gvt2.com
 .wxa.wxs.qq.com
 .ulogs.umengcloud.com
@@ -613,7 +654,6 @@ stun.smartgslb.com
 .telemetry-coverage.mozilla.org
 .omtrdc.net
 .incoming-telemetry.thunderbird.net
-.openx.net
 .notify6.com
 .notifysrv.com
 .advertising.com
@@ -666,7 +706,6 @@ switch.cup.com.cn
 .securemetrics.apple.com
 .sparkloop.app
 .fourier.alibaba.com
-.xycdn.com
 .natdetection.onethingpcs.com
 .cu-cn-north00002.gala.convection.cn
 .puata.info
@@ -688,12 +727,10 @@ switch.cup.com.cn
 .info.pinyin.sogou.com
 .get.sogou.com
 .vv.video.qq.com
-.doubleverify.com
 .monacobeatles.com
 .dxp.baidu.com
 .bgg.baidu.com
 .hmma.baidu.com
-.ffe390afd658c19dcbf707e0597b846d.de
 .api.ffbbbdc6d3c353211fe2ba39c9f744cd.com
 .fpnpmcdn.net
 .fpjs.io
@@ -711,7 +748,6 @@ ssl-cdn.static.browser.mi-img.com
 .proxy-mob-cld.alicdn.com
 .track.uc.cn
 .track.lc.quark.cn
-.prodregistryv2.org
 .cdn.fds.api.xiaomi.com
 .indexww.com
 .featuregates.org
@@ -778,7 +814,6 @@ cdn.gladly.com
 .theta.sogoucdn.com
 .sp1.baidu.com
 .imgs.xinhuanet.com
-.datadoghq-browser-agent.com
 .a.userscript.zone
 .h.online-metrix.net
 .online-metrix.net
@@ -787,7 +822,6 @@ cdn.gladly.com
 .tganalytics.xyz
 .o.webmd.com
 .se.360.cn
-.disableadblock.com
 .apmplus.volces.com
 .go.ezodn.com
 .g.ezodn.com
@@ -820,7 +854,6 @@ cdn.gladly.com
 .uranus.jd.com
 .event-stream.spot.im
 .pix.spot.im
-.3lift.com
 .bidswitch.net
 .connatix.com
 .rkdms.com
