--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4447,3 +4447,23 @@ click.suning.cn
 .zuowen.hydcd.com
 .zx.docin.com
 .zymo.mps.weibo.com
+.ads.stackoverflow.com
+.app.info.redhat.com
+.clc.stackoverflow.com
+.elq.redhat.com
+.error-collector.ted.com
+.gnar.grammarly.com
+.ma.redhat.com
+.metrics.redhat.com
+.metrics.ted.com
+.mixpanel-proxy.ted.com
+.mms.lifehacker.com
+.mtrcs.redhat.com
+.netlify-rum.netlify.app
+.privacyfriendly.netlify.app
+.qa.engage.redhat.com
+.rads.stackoverflow.com
+.register.redhat.com
+.smtrcs.redhat.com
+.treatment.grammarly.com
+.www.info.redhat.com
