--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1570,6 +1570,7 @@ click.suning.cn
 .config.ab.qq.com
 .config.uca.cloud.unity3d.com
 .consent.irvinecompany.com.cdn.cloudflare.net
+.collector.bsg.brave.com
 .cookiex.ngd.yahoo.com
 .copilot-telemetry.githubusercontent.com
 .corp.sts.microsoft.com
