--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4468,3 +4468,5 @@ click.suning.cn
 .smtrcs.redhat.com
 .treatment.grammarly.com
 .www.info.redhat.com
+.player-telemetry.vimeo.com
+.apcdp.apnews.com
