--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,3 +1,8 @@
+# .amdc.m.taobao.com 在extended-matching模式中会误杀1688
+# .ju.taobao.com 会误杀 mk.ju.taobao.com
+# .alimama.com 误杀阿里万相台
+# .acs.m.taobao.com extended-matching下误杀太多 
+# .s.click.taobao.com 造成误杀 
 .3lift.com
 .adjust.com
 .adnxs.com
@@ -80,7 +85,6 @@
 .metrics.icloud.com
 dns.weixin.qq.com.cn
 .uservoice.com
-# .amdc.m.taobao.com 在extended-matching模式中会误杀1688
 .applog.uc.cn
 .dorangesource.alicdn.com
 .loggw-ex.alipay.com
@@ -261,7 +265,6 @@ amap-aos-info-nogw.amap.com
 .b.bdstatic.com
 .up-hl.3g.qq.com
 .i.snssdk.com
-# .ju.taobao.com 会误杀 mk.ju.taobao.com
 count.taobao.com
 .tce.alicdn.com
 .crisp.chat
@@ -291,7 +294,6 @@ sofire.baidu.com
 gbfek.eastmoney.com
 sdk.open.talk.getui.net
 .urbanairship.com
-#误杀 .alimama.com
 .ott.cibntv.net
 .huatuo.qq.com
 .eum-appdynamics.com
@@ -673,7 +675,6 @@ stun.smartgslb.com
 .ads-monitoring.papegames.com
 .appcfg.v.qq.com
 .iphonesubmissions.apple.com
-# extended-matching下误杀太多 .acs.m.taobao.com
 .hd.mi.com
 .cnbj1.fds.api.xiaomi.com
 .experiments.apple.com
@@ -908,7 +909,6 @@ amos.alicdn.com
 .bj.bcebos.com
 .networkbench.com
 .beacon.cdn.qq.com
-# 造成误杀 .s.click.taobao.com
 .apppush-sh5.xiaohongshu.com
 .tjs.sjs.sinajs.cn
 .open.snssdk.com
