--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,8 +1,9 @@
-# .amdc.m.taobao.com 在extended-matching模式中会误杀1688
-# .ju.taobao.com 会误杀 mk.ju.taobao.com
-# .alimama.com 误杀阿里万相台
-# .acs.m.taobao.com extended-matching下误杀太多 
-# .s.click.taobao.com 造成误杀 
+# 默认情况下都可以开 extended-matching
+# .amdc.m.taobao.com 在extended-matching模式中会误杀1688，但还可以保留
+# .ju.taobao.com 会误杀 mk.ju.taobao.com，建议去除
+# .alimama.com 误杀阿里万相台，建议去除
+# .acs.m.taobao.com extended-matching下误杀太多，建议去除
+# .s.click.taobao.com 造成误杀，建议去除
 .3lift.com
 .adjust.com
 .adnxs.com
