--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -80,7 +80,7 @@
 # 以上是重合项，可说是经过验证
 .mcdn.bilivideo.cn
 .xp.apple.com
-# 以下来自于命令历史
+# 以下来自于命中历史
 .sentry.io
 .app.chatwoot.com
 .metrics.icloud.com
@@ -89,7 +89,7 @@ dns.weixin.qq.com.cn
 .applog.uc.cn
 .dorangesource.alicdn.com
 .loggw-ex.alipay.com
-.ynuf.aliapp.org
+ynuf.aliapp.org
 adashx.m.taobao.com
 .iadsdk.apple.com
 .api-adservices.apple.com
