--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4600,3 +4600,7 @@ click.suning.cn
 .zuowen.hydcd.com
 .zx.docin.com
 .zymo.mps.weibo.com
+.fxgate.baidu.com
+.p.controld.com
+.tracking.diet.mayoclinic.org
+.whatif.uk.adobe.com
