--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4604,3 +4604,65 @@ click.suning.cn
 .p.controld.com
 .tracking.diet.mayoclinic.org
 .whatif.uk.adobe.com
+.0a0d-d3l1vr.b-cdn.net
+.0a58b45e.b-cdn.net
+.1f506eaf.b-cdn.net
+.1wincdn.b-cdn.net
+.27051a00.b-cdn.net
+.31def833.b-cdn.net
+.3426e3de.b-cdn.net
+.578297a5.b-cdn.net
+.87fa4b7e.b-cdn.net
+.91116e9f.b-cdn.net
+.91fbab6d.b-cdn.net
+.9b583af3.b-cdn.net
+.abf53a6f.b-cdn.net
+.ad-serve.b-cdn.net
+.adblockers.b-cdn.net
+.admost-banner.b-cdn.net
+.ads-delivery.b-cdn.net
+.adsninja.b-cdn.net
+.adstatic.b-cdn.net
+.ahoy-internal-ads-hv.b-cdn.net
+.b442172e.b-cdn.net
+.b5a2e40a.b-cdn.net
+.b5f000a8.b-cdn.net
+.bbangads.b-cdn.net
+.bdtt.b-cdn.net
+.beamanalytics.b-cdn.net
+.bitcasino365.b-cdn.net
+.bs-adserver.b-cdn.net
+.catandmousegame.b-cdn.net
+.core-apps.b-cdn.net
+.creatopy-adtag-production.b-cdn.net
+.date2night.b-cdn.net
+.delicioustaco.b-cdn.net
+.df3a81b4.b-cdn.net
+.downloadshi.b-cdn.net
+.eatthiskok.b-cdn.net
+.f3eb2b32.b-cdn.net
+.gg-ads.b-cdn.net
+.gigachadlitics.b-cdn.net
+.heoads.b-cdn.net
+.hornylitics.b-cdn.net
+.keepblockingthislol.b-cdn.net
+.mellowads.b-cdn.net
+.performance-check.b-cdn.net
+.popcashjs.b-cdn.net
+.predataclient.b-cdn.net
+.propsid.b-cdn.net
+.psh-static.b-cdn.net
+.qvid2.b-cdn.net
+.sp-wukong-tracker.b-cdn.net
+.ss-mndsrv.b-cdn.net
+.st-fly.b-cdn.net
+.statistics.mailerlite.com
+.sunlightmetrics.b-cdn.net
+.system-beta.b-cdn.net
+.track-dark-bz.b-cdn.net
+.track.mailerlite.com
+.tracking.b-cdn.net
+.unibotscdn.b-cdn.net
+.verify-human.b-cdn.net
+.w2g-ping.b-cdn.net
+.winonexd.b-cdn.net
