--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4666,3 +4666,15 @@ click.suning.cn
 .verify-human.b-cdn.net
 .w2g-ping.b-cdn.net
 .winonexd.b-cdn.net
+.app.reuters.com
+.beacon.guim.co.uk
+.cmp.springernature.com
+.cxense.com
+.distillery.wistia.com
+.info.assets.reuters.com
+.link.reuters.com
+.links.younify.tv
+.p.reuters.com
+.pipedream.wistia.com
+.player.cnevids.com
+.stats.cnevids.com
