--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4678,3 +4678,10 @@ click.suning.cn
 .pipedream.wistia.com
 .player.cnevids.com
 .stats.cnevids.com
+.a.hcaptcha.com
+.firstpartycookie.istockphoto.com
+.images.e.istockphoto.com
+.om.dowjoneson.com
+.omni.istockphoto.com
+.oms.dowjoneson.com
+.somni.istockphoto.com
