--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4685,3 +4685,6 @@ click.suning.cn
 .omni.istockphoto.com
 .oms.dowjoneson.com
 .somni.istockphoto.com
+.ad.browser.qq.com
+.community.fandom.com
+.pubgw.api.ddxq.mobi
