--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -722,7 +722,6 @@ switch.cup.com.cn
 .umc.danuoyi.alicdn.com
 .cdn-go.cn
 .live-trace.bilibili.com
-.report-edge.agora.io
 .app-ads-services.com
 .wwads.cn
 .httpdns.yunxindns.com
@@ -4688,3 +4687,7 @@ click.suning.cn
 .ad.browser.qq.com
 .community.fandom.com
 .pubgw.api.ddxq.mobi
+.ads.linkedin.com
+.analytics.pointdrive.linkedin.com
+.report-edge.agora.io
+.snap.licdn.com
