--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4691,3 +4691,43 @@ click.suning.cn
 .analytics.pointdrive.linkedin.com
 .report-edge.agora.io
 .snap.licdn.com
+.ads.economist.com
+.analytics.global.sky.com
+.analytics2-3-meride-tv.akamaized.net
+.analytics2-meride-tv.akamaized.net
+.cdn-ketchapp.akamaized.net
+.cmp.osano.com
+.collect.rebelmouse.io
+.consent.economist.com
+.d3oq85vya4e39p.cloudfront.net
+.eldoradottfha.dataplane.rudderstack.com
+.fef258ef.b-cdn.net
+.freewheel-mtgx-tv.akamaized.net
+.hesads.akamaized.net
+.hs-scripts.com
+.hydro-ma-proxy.akamaized.net
+.idstatus.sky.com
+.impact.go.economist.com
+.inmobi.com
+.jioads.akamaized.net
+.kape.dataplane.rudderstack.com
+.lgforbes.akamaized.net
+.marketo.com
+.metrics-ieeexplore.ieee.org
+.metrics.brightcove.com
+.metrics.kapa.ai
+.metrics.sky.com
+.metrics.theatlantic.com
+.ninja.akamaized.net
+.perf.hsforms.com
+.popin.cc
+.smetrics-ieeexplore.ieee.org
+.smetrics.sky.com
+.speee-ad.akamaized.net
+.sstats.economist.com
+.static-ads.akamaized.net
+.stats.economist.com
+.tattle.api.osano.com
+.uz-analysis.akamaized.net
+.website-security.rapidssl.com
+.yengo.com
