--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4731,3 +4731,6 @@ click.suning.cn
 .uz-analysis.akamaized.net
 .website-security.rapidssl.com
 .yengo.com
+.analytics.paddle.com
+.happy-davinci-53144f.netlify.com
+.objective-wright-961fed.netlify.com
