--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4734,3 +4734,27 @@ click.suning.cn
 .analytics.paddle.com
 .happy-davinci-53144f.netlify.com
 .objective-wright-961fed.netlify.com
+.30032c91.b-cdn.net
+.ad.eporner.com
+.adf.shinobi.jp
+.adm.shinobi.jp
+.appointeeivyspongy.com
+.asumi.shinobi.jp
+.chaseherbalpasty.com
+.d1tlfk2mmne2t6.cloudfront.net
+.d3aicbrzoy14kh.cloudfront.net
+.data.glbdns2.microsoft.com
+.exoclick.com
+.holahupa.com
+.isolatedovercomepasted.com
+.omt.shinobi.jp
+.pipe.aria.microsoft.com
+.rcm.shinobi.jp
+.ssc.voacantonese.com
+.sync.shinobi.jp
+.tags.voacantonese.com
+.telemetry.appex.bing.com
+.v2st.shinobi.jp
+.vpovuwtwuzu.com
+.waqool.com
+.x9.shinobi.jp
