--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4753,3 +4753,20 @@ click.suning.cn
 .zx.docin.com
 .zymo.mps.weibo.com
 .wiwqhootrf.com
+.aamt.nbcnews.com
+.apv-launcher.minute.ly
+.axp.thehill.com
+.blue.thehill.com
+.data.minute.ly
+.geo.cnbc.com
+.links.nbcnews.com
+.nbc-jite.nbcuni.com
+.oimg.login.cnbc.com
+.oimg.m.calltheclose.cnbc.com
+.oimg.nbcuni.com
+.osimg.nbcuni.com
+.pix.nbcuni.com
+.player-metrics.instaread.co
+.summary.instaread.co
+.tinypass.com
+.video-ads-module.ad-tech.nbcuni.com
