--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4771,3 +4771,8 @@ click.suning.cn
 .tinypass.com
 .video-ads-module.ad-tech.nbcuni.com
 .coordinator.cm.bloomberg.com
+.a-adx.ctrip.com
+.ma-adx.ctrip.com
+.ns38541.ovh.net
+.s.c-ctrip.com
+.ubt-sin.tripcdn.com
