--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -79,7 +79,6 @@
 .xycdn.com
 # 以上是重合项，可说是经过验证
 .mcdn.bilivideo.cn
-.xp.apple.com
 # 以下来自于命中历史
 .sentry.io
 .app.chatwoot.com
@@ -1475,7 +1474,6 @@ click.suning.cn
 .beaconcdn.qq.com
 .beamanalytics.b-cdn.net
 .beap-bc.yahoo.com
-.behavior.tongdun.net
 .bes-mtj.baidu.com
 .bhwkju.vivo.com
 .biddingx.com
@@ -1563,9 +1561,7 @@ click.suning.cn
 .cbjslog.baidu.com
 .cc.map.qq.com
 .cc.sys.intl.xiaomi.com
-.cc.sys.miui.com
 .ccc.sys.intl.xiaomi.com
-.ccc.sys.miui.com
 .cdj-dap.s3-ap-northeast-1.amazonaws.com
 .cdn-bongdadem-net.cdn.ampproject.org
 .cdn-ketchapp.akamaized.net
@@ -1604,7 +1600,6 @@ click.suning.cn
 .clientlogdep.music.163.com
 .clientlogsf.music.163.com
 .clientmetrics-pa.googleapis.com
-.cloudconf.fengkongcloud.com
 .clouderrorreporting.googleapis.com
 .cloudfront-labs.amazonaws.com
 .cm.baidu.com
@@ -3483,7 +3478,6 @@ click.suning.cn
 .geo.adobe.com
 .geo.query.yahoo.com
 .geo.yahoo.com
-.geofence.sys.miui.com
 .geolocation.forbes.com
 .getyour5kcredits0.blogspot.com
 .getyourgiftnow2.blogspot.com
@@ -3871,7 +3865,6 @@ click.suning.cn
 .mermaid.ximalaya.com
 .messaging-notifications.api.nytimes.com
 .meter-svc.nytimes.com
-.metok.sys.miui.com
 .metrics-cbslocal-com.cdn.ampproject.org
 .metrics-ieeexplore.ieee.org
 .metrics.accuweather.com
@@ -4383,7 +4376,6 @@ click.suning.cn
 .static-doubleclick-net.l.google.com
 .static-tracking.klaviyo.com
 .static.2mdn.net
-.static.fengkongcloud.com
 .static.ku6.com
 .staticxx.facebook.com
 .statistic.qzone.qq.com
@@ -4510,7 +4502,6 @@ click.suning.cn
 .tracker.anandtech.com
 .tracker.baidu.com
 .tracker.dcdn.baidu.com
-.tracker.fengkongcloud.com
 .tracker.kugou.com
 .trackercdnbj.kugou.com
 .tracking.agora.io
@@ -4778,3 +4769,24 @@ click.suning.cn
 .ubt-sin.tripcdn.com
 .experience.contextly.com
 .plaus.outpost.pub
+.2xbits.blogspot.com
+.2xbits.eu.org
+.binance.us
+.c7e935.netlify.com
+.coins.arstechnica.com
+.cryptown.netlify.com
+.d1e1rbybdt265x.cloudfront.net
+.d3ddidv77grh0f.cloudfront.net
+.dun.mi.com
+.fengkongcloud.com
+.huodong.mi.com
+.jr.mi.com
+.mpool.eu.org
+.mvideo.xiaomi.com
+.nadjibsoft.blogspot.com
+.pipi.cn
+.sys.miui.com
+.techhome-js.github.io
+.thelifeisbinary.netlify.com
+.tongdun.net
+.zeus-nevo.pages.dev
